# DeltaVault-

./: .gitignore  BUILD_AND_RUN.md  CMakeLists.txt  README.md  USER_GUIDE.md
src/: backup_pipeline.cpp  backup_pipeline.h  block_index.cpp  block_index.h  block_splitter.cpp  block_splitter.h  file_scanner.cpp  file_scanner.h  hash_engine.cpp  hash_engine.h  main.cpp  main_ui.cpp  metadata_db.cpp  metadata_db.h  restore_manager.cpp  restore_manager.h  storage_manager.cpp  storage_manager.h  thread_pool.cpp  thread_pool.h  version_graph.cpp  version_graph.h
src/ui/: main_window.cpp  main_window.h
tests/: stress_test.py
